--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.10
 inflection==0.5.1
 packaging==24.2
 pillow==11.1.0
+psycopg2-binary==2.9.10
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
