--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,40 @@
+amqp==5.3.1
 asgiref==3.8.1
+asyncio==3.4.3
+billiard==4.2.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cron-descriptor==1.4.5
 Django==5.1.7
 django-ckeditor==6.7.2
 django-cors-headers==4.7.0
 django-js-asset==3.1.2
+django-timezone-field==7.1
+django-unfold==0.54.0
+django_sonar==0.1.8
 djangorestframework==3.16.0
 drf-yasg==1.21.10
 idna==3.10
 inflection==0.5.1
+kombu==5.5.2
 packaging==24.2
 pillow==11.1.0
+prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
+six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
 uritemplate==4.1.1
 urllib3==2.3.0
 uv==0.6.11
+vine==5.1.0
+wcwidth==0.2.13
